--- a/mta.yaml
+++ b/mta.yaml
@@ -1,3 +1,47 @@
 ID: Synapplix_OData_Service
 _schema-version: '2.0'
 version: 0.0.1
+modules:
+  - name: db
+    type: hdb
+    path: db
+    requires:
+      - name: hdi_db
+        properties:
+          TARGET_CONTAINER: '~{hdi-container-name}'
+      - name: CROSS_SCHEMA_SXTESTUSER
+
+  - name: js
+    type: nodejs
+    path: js
+    provides:
+     - name: js_api
+       properties:
+          url: ${default-url}
+    requires:
+      - name: hdi_db
+      - name: db
+
+  - name: web
+    type: html5
+    path: web
+    requires:
+      - name: js_api
+        properties:
+          name: core-backend
+          url: '~{url}'
+          forwardAuthToken: true
+        group: destinations
+      - name: HANA2-uaa
+
+resources:
+  - name: hdi_db
+    properties:
+      hdi-container-name: '${service-name}'
+    type: com.sap.xs.hdi-container
+  - name: CROSS_SCHEMA_SXTESTUSER
+    type: org.cloudfoundry.existing-service
+  - name: HANA2-uaa
+    type: com.sap.xs.uaa-space
+    parameters:
+      config-path: ./xs-security.json
