--- a/mta.yaml
+++ b/mta.yaml
@@ -1,17 +1,17 @@
 ID: Synapplix_OData_Service
 _schema-version: '2.0'
-version: 0.0.1
+version: 1.0.0
 modules:
-  - name: db
+  - name: Synapplix_OData_Service_db
     type: hdb
     path: db
     requires:
-      - name: hdi_db
+      - name: Synapplix_OData_Service_hdi_db
         properties:
           TARGET_CONTAINER: '~{hdi-container-name}'
       - name: CROSS_SCHEMA_SXTESTUSER
 
-  - name: js
+  - name: Synapplix_OData_Service_js
     type: nodejs
     path: js
     provides:
@@ -19,10 +19,10 @@ modules:
        properties:
           url: ${default-url}
     requires:
-      - name: hdi_db
-      - name: db
+      - name: Synapplix_OData_Service_hdi_db
+      - name: Synapplix_OData_Service_db
 
-  - name: web
+  - name: Synapplix_OData_Service_web
     type: html5
     path: web
     requires:
@@ -35,12 +35,18 @@ modules:
       - name: HANA2-uaa
 
 resources:
-  - name: hdi_db
+  - name: Synapplix_OData_Service_hdi_db
     properties:
       hdi-container-name: '${service-name}'
     type: com.sap.xs.hdi-container
+    parameters:
+      config:
+        schema: SX_ODATA_SERVICE
+        makeUniqueName: false
+        
   - name: CROSS_SCHEMA_SXTESTUSER
     type: org.cloudfoundry.existing-service
+    
   - name: HANA2-uaa
     type: com.sap.xs.uaa-space
     parameters:
